# SmashU

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
application/: CMakeLists.txt  application.vcxproj  application.vcxproj.filters  cmake_install.cmake  imgui.ini
application/Debug/: application.exp  application.lib
application/application.dir/Debug/: application.exe.recipe
application/application.dir/Debug/application.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  application.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
application/src/: main.cpp  settings.h
application/src/common/: game_assets.cpp  game_assets.h  game_common.cpp  game_common.h  game_settings.h
application/src/ecs/common/: camera.cpp  camera.h  damage_utils.cpp  damage_utils.h  kinematic_utils.cpp  kinematic_utils.h  terrain_utils.cpp  terrain_utils.h  tracked_target.cpp  tracked_target.h  visual_id.cpp  visual_id.h
application/src/ecs/item/: bomb.cpp  bomb.h  potion.cpp  potion.h
application/src/ecs/player/: Metal_Bladekeeper_system.cpp  Metal_Bladekeeper_system.h  fire_knight_system.cpp  fire_knight_system.h  player_ai.cpp  player_ai.h  player_command.cpp  player_command.h  player_components.cpp  player_components.h  player_controller_system.cpp  player_controller_system.h  player_input_system.cpp  player_input_system.h  player_utils.cpp  player_utils.h  shield.cpp  shield.h  water_priestess_system.cpp  water_priestess_system.h
application/src/ecs/stage/: star_fields_platform.cpp  star_fields_platform.h  star_fields_terrain.cpp  star_fields_terrain.h
application/src/imgui/: imgui_components.cpp  imgui_components.h  imgui_manager.cpp  imgui_manager.h
application/src/input/: application_input.cpp  application_input.h  controls_input.cpp  controls_input.h  mouse_input.cpp  mouse_input.h
application/src/scene_manager/: stage_manager.cpp  stage_manager.h  title_manager.cpp  title_manager.h
application/src/ui/custom_default/: ui_default_button.cpp  ui_default_button.h  ui_default_cursor.cpp  ui_default_cursor.h  ui_text_list.cpp  ui_text_list.h
application/src/ui/stage/: ui_pause_menu.cpp  ui_pause_menu.h  ui_stage_hud.cpp  ui_stage_hud.h
application/src/ui/title/: ui_stage_page.cpp  ui_stage_page.h  ui_title_background.cpp  ui_title_background.h  ui_title_page.cpp  ui_title_page.h
assets/: LICENSE.md
assets/atlas/: shield.json
assets/atlas/dust/: big_smoke.json  dash_smoke_1.json  dash_smoke_2.json  dust_1.json  dust_2.json  dust_3.json  dust_4.json  impact_smoke.json  side_impact.json
assets/atlas/fighter/: Metal_bladekeeper_1.json  Metal_bladekeeper_2.json  fire_knight_0.json  fire_knight_1.json  water_priestess_0.json  water_priestess_1.json
assets/atlas/item/: bomb.json  potion.json
assets/atlas/ui/: ui_base.json  ui_stage.json
assets/atlas/vfx/: explosion.json  heal_effect.json  hit_effect_01.json  particles.json  potion_effect.json  power.json
assets/background/: tileset_star_fields.json
engine/: CMakeLists.txt
engine/src/: game_engine.h  game_engine_common.cpp  game_engine_common.h  game_engine_settings.h
engine/src/ecs/: basic_components.cpp  basic_components.h  basic_systems.cpp  basic_systems.h  command_buffer.cpp  command_buffer.h
engine/src/imgui/: imgui_basic_components.cpp  imgui_basic_components.h  imgui_component_base.cpp  imgui_component_base.h  imgui_manager_base.cpp  imgui_manager_base.h
engine/src/input/: input_group.cpp  input_group.h  input_manager.cpp  input_manager.h  ui_input.cpp  ui_input.h
engine/src/rendering/: anim.cpp  anim.h  easing_fct.cpp  easing_fct.h  renderer.cpp  renderer.h  sprite_anim.cpp  sprite_anim.h  sprite_sheet.cpp  sprite_sheet.h
engine/src/scene/: asset_manager.cpp  asset_manager.h  particle_system.cpp  particle_system.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
engine/src/ui/: ui_object.cpp  ui_object.h  ui_object_manager.cpp  ui_object_manager.h
engine/src/ui/base/: ui_base_list.cpp  ui_base_list.h  ui_canvas.cpp  ui_canvas.h  ui_grid_layout.cpp  ui_grid_layout.h  ui_selectable.cpp  ui_selectable.h  ui_selectable_group.cpp  ui_selectable_group.h
engine/src/ui/interaction/: ui_button.cpp  ui_button.h  ui_item_list.cpp  ui_item_list.h
engine/src/ui/visual/: ui_animator.cpp  ui_animator.h  ui_fill_rect.cpp  ui_fill_rect.h  ui_image.cpp  ui_image.h  ui_text.cpp  ui_text.h
engine/src/utils/: color.cpp  color.h  gizmos_shape.cpp  gizmos_shape.h  timer.cpp  timer.h  utils.cpp  utils.h
